📝 docs(README): add instructions for using multiple subnets
- provide examples for specifying multiple subnet IDs and names
- update documentation to guide users on using multiple subnets with NodeENI

✨ feat(controller): support multiple subnets for ENI creation

- introduce new fields `subnetIDs` and `subnetNames` in CRD
- add logic to select a subnet from provided IDs or names
- enhance flexibility in ENI creation by allowing multiple subnet options

♻️ refactor(controller): extract subnet ID determination logic

- create `determineSubnetID` function for clearer subnet selection process
- improve code readability by separating subnet logic from ENI creation

📝 docs(crds): update CRD documentation for subnet enhancements

- document new `subnetIDs` and `subnetNames` fields in CRD YAML
- clarify usage scenarios for multiple subnets in ENI configuration

✨ feat(samples): add sample configurations for multiple subnets

- include new YAML samples demonstrating usage of multiple subnet IDs and names
- provide practical examples for users to reference when configuring ENIs

--- a/charts/aws-multi-eni-controller/crds/networking.k8s.aws_nodeenis_crd.yaml
+++ b/charts/aws-multi-eni-controller/crds/networking.k8s.aws_nodeenis_crd.yaml
@@ -62,9 +62,19 @@ spec:
               subnetID:
                 description: AWS Subnet ID where the ENI should be created
                 type: string
+              subnetIDs:
+                description: List of AWS Subnet IDs where the ENI can be created (one will be selected)
+                items:
+                  type: string
+                type: array
               subnetName:
                 description: AWS Subnet Name where the ENI should be created (used if subnetID is not provided)
                 type: string
+              subnetNames:
+                description: List of AWS Subnet Names where the ENI can be created (one will be selected)
+                items:
+                  type: string
+                type: array
             required:
             - nodeSelector
             type: object
