📝 docs(README): update subnet usage instructions
- modify documentation to reflect that ENIs will be created in all specified subnets
- clarify device index incrementation for multiple ENIs

♻️ refactor(controller): support multiple subnet ENI creation

- add logic to create ENIs in all specified subnets
- introduce new function to handle ENI creation per subnet
- ensure backward compatibility with existing single subnet logic

🌐 i18n(types): add subnetID to ENI attachment

- include subnetID in ENI attachment struct for better traceability

📝 docs(controller): enhance ENI creation notes

- update comments and logging to explain new subnet handling
- provide examples for device index incrementation across subnets

--- a/charts/aws-multi-eni-controller/crds/networking.k8s.aws_nodeenis_crd.yaml
+++ b/charts/aws-multi-eni-controller/crds/networking.k8s.aws_nodeenis_crd.yaml
@@ -99,6 +99,9 @@ spec:
                     nodeID:
                       description: ID of the node
                       type: string
+                    subnetID:
+                      description: ID of the subnet where the ENI was created
+                      type: string
                     status:
                       description: Status of the attachment
                       type: string
