--- a/deploy/samples/multi-subnet-claim.yaml
+++ b/deploy/samples/multi-subnet-claim.yaml
@@ -5,15 +5,15 @@ metadata:
 spec:
   nodeSelector:
     ng: multi-eni
-  # Specify multiple subnet IDs - one will be selected
+  # Specify multiple subnet IDs - ENIs will be created in ALL subnets
   subnetIDs:
   - subnet-0f59b4f14737be9ad  # Replace with your subnet ID
   - subnet-abcdef1234567890  # Replace with your subnet ID
   securityGroupIDs:
   - sg-05da196f3314d4af8  # Replace with your security group ID
-  deviceIndex: 1
+  deviceIndex: 1  # This is the base device index, will be incremented for additional ENIs
   deleteOnTermination: true
-  description: "ENI with multiple subnet options"
+  description: "ENI with multiple subnets"
 ---
 # Alternative using subnet names
 apiVersion: networking.k8s.aws/v1alpha1
@@ -23,12 +23,12 @@ metadata:
 spec:
   nodeSelector:
     ng: multi-eni
-  # Specify multiple subnet names - one will be selected
+  # Specify multiple subnet names - ENIs will be created in ALL subnets
   subnetNames:
   - eks-private-subnet-1
   - eks-private-subnet-2
   securityGroupIDs:
   - sg-05da196f3314d4af8  # Replace with your security group ID
-  deviceIndex: 2
+  deviceIndex: 2  # This is the base device index, will be incremented for additional ENIs
   deleteOnTermination: true
-  description: "ENI with multiple subnet name options"
+  description: "ENI with multiple subnet names"
