✨ feat(eni-manager): add ENI pattern and ignore list configuration
- introduce command-line flags and environment variable support for ENI pattern and ignore list
- implement function to check interfaces against ENI pattern and ignore list

♻️ refactor(config): enhance configuration loading

- update LoadENIManagerConfigFromFlags to handle new flags
- add utility function splitCSV for parsing ignore list

🐛 fix(deployment): update container image version

- change image tag to "multi-subnet-v2" for manager and eni-manager containers

--- a/deploy/eni-manager-daemonset.yaml
+++ b/deploy/eni-manager-daemonset.yaml
@@ -31,6 +31,8 @@ spec:
         args:
         - --check-interval=30s
         - --debug=true
+        - --eni-pattern=^(eth|ens|eni|en)[0-9]+
+        - --ignore-interfaces=tunl0,gre0,gretap0,erspan0,ip_vti0,ip6_vti0,sit0,ip6tnl0,ip6gre0
         # Primary interface will be auto-detected
         resources:
           limits:
