📦 build(deploy): update container image version
- change image version from latest to multi-subnet-v4 in deployment and daemonset

♻️ refactor(controller): enhance ENI cleanup process

- introduce cleanup success tracking for ENI deletion
- ensure finalizers are only removed after successful cleanup
- consolidate stale ENI cleanup logic with finalizer cleanup process

--- a/deploy/eni-manager-daemonset.yaml
+++ b/deploy/eni-manager-daemonset.yaml
@@ -20,7 +20,7 @@ spec:
         ng: multi-eni
       containers:
       - name: eni-manager
-        image: ghcr.io/johnlam90/aws-multi-eni-controller:latest
+        image: johnlam90/aws-multi-eni-controller:multi-subnet-v4
         env:
         - name: COMPONENT
           value: "eni-manager"
