--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -95,7 +95,7 @@ spec:
       serviceAccountName: eni-controller
       containers:
       - name: manager
-        image: ghcr.io/johnlam90/aws-multi-eni-controller:latest
+        image: johnlam90/aws-multi-eni-controller:multi-subnet-v4
         env:
         - name: COMPONENT
           value: "eni-controller"
