✨ feat(eni-manager): add netlink subscription mode
- introduce netlink subscription mode for immediate interface change handling
- add context and signal handling for graceful shutdown
- update logging to reflect new configuration options

📦 build(deployment): update container image version

- bump eni-manager image to multi-subnet-v6
- update deployment and daemonset configurations

🔧 chore(dependencies): update module dependencies

- update go-cmp to v0.6.0
- add dependencies for netlink and socket packages
- update various other indirect dependencies to latest versions

--- a/deploy/eni-manager-daemonset.yaml
+++ b/deploy/eni-manager-daemonset.yaml
@@ -20,7 +20,7 @@ spec:
         ng: multi-eni
       containers:
       - name: eni-manager
-        image: johnlam90/aws-multi-eni-controller:multi-subnet-v5
+        image: johnlam90/aws-multi-eni-controller:multi-subnet-v6
         env:
         - name: COMPONENT
           value: "eni-manager"
@@ -33,6 +33,7 @@ spec:
         - --debug=true
         - --eni-pattern=^(eth|ens|eni|en)[0-9]+
         - --ignore-interfaces=tunl0,gre0,gretap0,erspan0,ip_vti0,ip6_vti0,sit0,ip6tnl0,ip6gre0
+        - --use-netlink=true
         # Primary interface will be auto-detected
         resources:
           limits:
