🐛 fix(deployment): update image references to latest
- change image tags to 'beta-latest' for consistent deployment
- ensure both deployment and daemonset use the same image version

✨ feat(samples): add nodeeni sample with subnet and security group names

- introduce nodeeni sample using subnet names and security group names
- provide detailed configuration for nodeeni with description

✨ feat(controller): improve ENI cleanup and logging

- add event logging for already removed or deleted ENIs
- enhance stale ENI handling with specific error checks
- log successful removal of stale attachments and handle errors gracefully

--- a/deploy/eni-manager-daemonset.yaml
+++ b/deploy/eni-manager-daemonset.yaml
@@ -20,7 +20,7 @@ spec:
         ng: multi-eni
       containers:
       - name: eni-manager
-        image: johnlam90/aws-multi-eni-controller:multi-subnet-v6
+        image: ghcr.io/johnlam90/aws-multi-eni-controller:beta-latest
         env:
         - name: COMPONENT
           value: "eni-manager"
