--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -95,7 +95,7 @@ spec:
       serviceAccountName: eni-controller
       containers:
       - name: manager
-        image: ghcr.io/johnlam90/aws-multi-eni-controller:beta-2e25027
+        image: ghcr.io/johnlam90/aws-multi-eni-controller:beta-latest
         env:
         - name: COMPONENT
           value: "eni-controller"
