fix: improve ENI attachment verification to handle manually detached ENIs
- Enhanced verifyENIAttachments method with better error handling and detection
- Improved processNodeENI to verify ENIs for nodes no longer matching selector
- Enhanced AWS EC2 client methods with better error handling and logging
- Added shorter reconciliation period option for testing
- Updated deployment.yaml with new environment variable

--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -106,6 +106,9 @@ spec:
         # Maximum number of concurrent ENI cleanup operations
         - name: MAX_CONCURRENT_ENI_CLEANUP
           value: "3"
+        # Enable shorter reconciliation period for testing
+        - name: SHORTER_RECONCILE_PERIOD
+          value: "true"
         args:
         - --metrics-addr=:8080
         - --enable-leader-election
