Update Helm chart for v1.2.4 release

--- a/charts/aws-multi-eni-controller/Chart.yaml
+++ b/charts/aws-multi-eni-controller/Chart.yaml
@@ -2,8 +2,8 @@ apiVersion: v2
 name: aws-multi-eni-controller
 description: A Helm chart for AWS Multi-ENI Controller
 type: application
-version: 0.3.1
-appVersion: "v1.2.3"
+version: 0.3.2
+appVersion: "v1.2.4"
 home: https://github.com/johnlam90/aws-multi-eni-controller
 sources:
   - https://github.com/johnlam90/aws-multi-eni-controller
@@ -18,8 +18,8 @@ keywords:
 annotations:
   artifacthub.io/license: Apache-2.0
   artifacthub.io/changes: |
-    - Improve detection of manually detached ENIs to avoid manual intervention
-    - Enhance ENI attachment verification to be more reliable
-    - Add more robust checks for ENI attachment status
-    - Fix issue where controller would not detect manually detached ENIs
-    - Update subnet CIDR display in ENI attachment status
+    - Refactor verifyENIAttachments to reduce cyclomatic complexity
+    - Improve code maintainability by breaking down complex functions
+    - Enhance error handling for ENI attachment verification
+    - Fix code quality issues identified by gocyclo
+    - Maintain all functionality while improving code structure
