Adds MTU configuration for ENIs
Enables configuration of the Maximum Transmission Unit (MTU) for Elastic Network Interfaces (ENIs).

This allows users to specify a custom MTU value for each NodeENI, overriding the system default.
The MTU value is configurable via the NodeENI CRD and the eni-manager daemonset.
A fallback mechanism using the 'ip' command is implemented if the netlink method fails to set the MTU.

Adds a sample NodeENI manifest with a custom MTU value.

--- a/charts/aws-multi-eni-controller/crds/networking.k8s.aws_nodeenis_crd.yaml
+++ b/charts/aws-multi-eni-controller/crds/networking.k8s.aws_nodeenis_crd.yaml
@@ -75,6 +75,9 @@ spec:
                 items:
                   type: string
                 type: array
+              mtu:
+                description: Maximum Transmission Unit (MTU) for the ENI (default system default)
+                type: integer
             required:
             - nodeSelector
             type: object
@@ -105,6 +108,9 @@ spec:
                     subnetCIDR:
                       description: CIDR block of the subnet where the ENI was created
                       type: string
+                    mtu:
+                      description: Maximum Transmission Unit (MTU) configured for the ENI
+                      type: integer
                     status:
                       description: Status of the attachment
                       type: string
