--- a/charts/aws-multi-eni-controller/templates/manager-daemonset.yaml
+++ b/charts/aws-multi-eni-controller/templates/manager-daemonset.yaml
@@ -38,6 +38,8 @@ spec:
           value: "{{ .Values.awsRegion }}"
         - name: LOG_LEVEL
           value: "{{ .Values.logLevel }}"
+        - name: DEFAULT_MTU
+          value: "{{ .Values.eniManager.defaultMTU | default "0" }}"
         {{- if .Values.metrics.enabled }}
         - name: METRICS_PORT
           value: "{{ .Values.metrics.port }}"
