--- a/deploy/eni-manager-daemonset.yaml
+++ b/deploy/eni-manager-daemonset.yaml
@@ -24,6 +24,8 @@ spec:
         env:
         - name: COMPONENT
           value: "eni-manager"
+        - name: DEFAULT_MTU
+          value: "0"  # 0 means use system default
         securityContext:
           privileged: true
           capabilities:
