Adds MTU configuration for network interfaces
Enables setting MTU on ENIs, including support for jumbo frames.

This commit introduces the ability to configure the MTU (Maximum Transmission Unit) for network interfaces managed by the ENI manager. It supports setting a default MTU via the DEFAULT_MTU environment variable and interface-specific MTUs via the INTERFACE_MTUS environment variable, allowing for customized MTU configurations, including jumbo frames (MTU 9000).

--- a/deploy/samples/nodeeni-subnets-sg-names.yaml
+++ b/deploy/samples/nodeeni-subnets-sg-names.yaml
@@ -19,6 +19,9 @@ spec:
   # Device index for the ENI (1-based)
   deviceIndex: 2
 
+  # MTU for the ENI (9000 for jumbo frames)
+  mtu: 9000
+
   # Whether to delete the ENI when the instance terminates
   deleteOnTermination: true
 
