Enables MTU configuration via NodeENI CRD
Introduces an MTU updater that periodically retrieves MTU settings from NodeENI resources and configures the interfaces accordingly.
This allows users to dynamically configure MTUs on ENIs using a Kubernetes-native approach.
The default MTU is also changed to 9000 to enable jumbo frames.
Updates the images used for the controller and manager components.

--- a/charts/aws-multi-eni-controller/templates/manager-daemonset.yaml
+++ b/charts/aws-multi-eni-controller/templates/manager-daemonset.yaml
@@ -39,7 +39,11 @@ spec:
         - name: LOG_LEVEL
           value: "{{ .Values.logLevel }}"
         - name: DEFAULT_MTU
-          value: "{{ .Values.eniManager.defaultMTU | default "0" }}"
+          value: "{{ .Values.eniManager.defaultMTU | default "9000" }}"
+        - name: NODE_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: spec.nodeName
         {{- if .Values.metrics.enabled }}
         - name: METRICS_PORT
           value: "{{ .Values.metrics.port }}"
