--- a/charts/aws-multi-eni-controller/Chart.yaml
+++ b/charts/aws-multi-eni-controller/Chart.yaml
@@ -2,8 +2,8 @@ apiVersion: v2
 name: aws-multi-eni-controller
 description: A Helm chart for AWS Multi-ENI Controller
 type: application
-version: 0.3.2
-appVersion: "v1.2.4"
+version: 0.3.3
+appVersion: "v1.2.5"
 home: https://github.com/johnlam90/aws-multi-eni-controller
 sources:
   - https://github.com/johnlam90/aws-multi-eni-controller
@@ -18,8 +18,8 @@ keywords:
 annotations:
   artifacthub.io/license: Apache-2.0
   artifacthub.io/changes: |
-    - Refactor verifyENIAttachments to reduce cyclomatic complexity
-    - Improve code maintainability by breaking down complex functions
-    - Enhance error handling for ENI attachment verification
-    - Fix code quality issues identified by gocyclo
-    - Maintain all functionality while improving code structure
+    - Add configurable MTU option for ENIs in NodeENI resources
+    - Implement MTU configuration in ENI Manager
+    - Update ENI attachment status to include MTU information
+    - Fix code quality issues and reduce cyclomatic complexity
+    - Improve error handling and logging for MTU configuration
