--- a/charts/aws-multi-eni-controller/values.yaml
+++ b/charts/aws-multi-eni-controller/values.yaml
@@ -21,8 +21,8 @@ controller:
 
 # ENI Manager configuration
 eniManager:
-  # Default MTU to set on ENIs (9000 for jumbo frames)
-  defaultMTU: 9000
+  # Default MTU to set on ENIs (0 to use MTU from NodeENI resources)
+  defaultMTU: 0
 
 # Resource configuration for the controller
 resources:
