Improves MTU configuration from NodeENI
Enhances MTU configuration by retrieving the MTU value from the NodeENI attachment.
It first checks for an MTU value in the attachment and falls back to the NodeENI spec if not found.
It then applies the configured MTU to the corresponding interface.
It also enhances the mechanism to discover the interface associated with an ENI by first querying the AWS metadata for MAC address and then mapping it to the interface name.
Adds more logging for debugging.

--- a/deploy/eni-manager-daemonset.yaml
+++ b/deploy/eni-manager-daemonset.yaml
@@ -30,6 +30,12 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: spec.nodeName
+        - name: AWS_REGION
+          valueFrom:
+            fieldRef:
+              fieldPath: spec.nodeName
+              # This is a placeholder - in a real deployment, you would use a configmap or
+              # the downward API to get the AWS region
         securityContext:
           privileged: true
           capabilities:
