--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -32,6 +32,23 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.23'
+          check-latest: true
+
+      # Add Go module caching
+      - name: Go Module Cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         env:
@@ -91,8 +108,12 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
             GOTOOLCHAIN=auto
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+            SKIP_TESTS=true
+            SKIP_UPX=false
+          cache-from: type=gha,scope=${{ github.workflow }}
+          cache-to: type=gha,mode=max,scope=${{ github.workflow }}
+          platforms: linux/amd64
+          provenance: false
 
       - name: Display manual instructions for making package public
         run: |
