--- a/charts/aws-multi-eni-controller/Chart.yaml
+++ b/charts/aws-multi-eni-controller/Chart.yaml
@@ -2,8 +2,8 @@ apiVersion: v2
 name: aws-multi-eni-controller
 description: A Helm chart for AWS Multi-ENI Controller
 type: application
-version: "1.26"
-appVersion: "v1.26"
+version: "1.2.7"
+appVersion: "v1.2.7"
 home: https://github.com/johnlam90/aws-multi-eni-controller
 sources:
   - https://github.com/johnlam90/aws-multi-eni-controller
@@ -18,9 +18,9 @@ keywords:
 annotations:
   artifacthub.io/license: Apache-2.0
   artifacthub.io/changes: |
-    - Update version to v1.26
-    - Add MAX_CONCURRENT_RECONCILES parameter for better scaling
-    - Improve MTU configuration for all interfaces
-    - Optimize Docker build process
-    - Fix code quality issues and reduce cyclomatic complexity
-    - Improve error handling and logging
+    - Update version to v1.2.7
+    - Optimize AWS API calls with caching for subnet and security group information
+    - Improve parallel cleanup implementation with worker pool pattern
+    - Optimize interface monitoring with caching for pattern matching
+    - Streamline MTU configuration logic
+    - Reduce verbose logging in performance-critical paths
