--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -95,7 +95,7 @@ spec:
       serviceAccountName: eni-controller
       containers:
       - name: manager
-        image:  ghcr.io/johnlam90/aws-multi-eni-controller:beta.sandbox-test0-7.9f625f3
+        image:  ghcr.io/johnlam90/aws-multi-eni-controller:v1.2.7
         env:
         - name: COMPONENT
           value: "eni-controller"
