--- a/charts/aws-multi-eni-controller/Chart.yaml
+++ b/charts/aws-multi-eni-controller/Chart.yaml
@@ -2,8 +2,8 @@ apiVersion: v2
 name: aws-multi-eni-controller
 description: A Helm chart for AWS Multi-ENI Controller
 type: application
-version: "1.2.9"
-appVersion: "v1.2.9"
+version: "1.3.0"
+appVersion: "v1.3.0"
 home: https://github.com/johnlam90/aws-multi-eni-controller
 sources:
   - https://github.com/johnlam90/aws-multi-eni-controller
@@ -18,7 +18,8 @@ keywords:
 annotations:
   artifacthub.io/license: Apache-2.0
   artifacthub.io/changes: |
-    - Update version to v1.2.9
+    - Update version to v1.3.0
+    - Fix: Delete manually detached ENIs to avoid resource leakage
     - Add device index tracking to ENI attachments for better reconciliation
     - Ensure consistent device index to subnet mapping across all nodes
     - Improve handling of manually detached ENIs
