--- a/charts/aws-multi-eni-controller/templates/manager-daemonset.yaml
+++ b/charts/aws-multi-eni-controller/templates/manager-daemonset.yaml
@@ -25,12 +25,15 @@ spec:
       {{- end }}
     spec:
       serviceAccountName: {{ .Values.serviceAccount.name }}
-      securityContext:
-        {{- toYaml .Values.securityContext | nindent 8 }}
+      hostNetwork: true
       containers:
       - name: eni-manager
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
+        securityContext:
+          privileged: true
+          capabilities:
+            add: ["NET_ADMIN"]
         env:
         - name: COMPONENT
           value: "eni-manager"
@@ -48,6 +51,12 @@ spec:
         - name: METRICS_PORT
           value: "{{ .Values.metrics.port }}"
         {{- end }}
+        args:
+        - --check-interval={{ .Values.eniManager.checkInterval }}
+        - --debug={{ .Values.eniManager.debug }}
+        - --eni-pattern={{ .Values.eniManager.eniPattern }}
+        - --ignore-interfaces={{ .Values.eniManager.ignoreInterfaces }}
+        - --use-netlink={{ .Values.eniManager.useNetlink }}
         resources:
           {{- toYaml .Values.resources.manager | nindent 10 }}
         {{- if .Values.metrics.enabled }}
@@ -56,6 +65,23 @@ spec:
           containerPort: {{ .Values.metrics.port }}
           protocol: TCP
         {{- end }}
+        volumeMounts:
+        - name: host-sys
+          mountPath: /host/sys
+        - name: host-proc
+          mountPath: /host/proc
+        - name: host-run
+          mountPath: /host/run
+      volumes:
+      - name: host-sys
+        hostPath:
+          path: /sys
+      - name: host-proc
+        hostPath:
+          path: /proc
+      - name: host-run
+        hostPath:
+          path: /run
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
