--- a/charts/aws-multi-eni-controller/templates/rbac.yaml
+++ b/charts/aws-multi-eni-controller/templates/rbac.yaml
@@ -3,7 +3,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: eni-controller
+  name: eni-controller-role
   labels:
     app.kubernetes.io/name: aws-multi-eni-controller
     app.kubernetes.io/instance: {{ .Release.Name }}
@@ -17,6 +17,13 @@ rules:
   - get
   - list
   - watch
+- apiGroups:
+  - ""
+  resources:
+  - events
+  verbs:
+  - create
+  - patch
 - apiGroups:
   - networking.k8s.aws
   resources:
@@ -37,11 +44,23 @@ rules:
   - get
   - patch
   - update
+- apiGroups:
+  - coordination.k8s.io
+  resources:
+  - leases
+  verbs:
+  - get
+  - list
+  - watch
+  - create
+  - update
+  - patch
+  - delete
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: eni-controller
+  name: eni-controller-rolebinding
   labels:
     app.kubernetes.io/name: aws-multi-eni-controller
     app.kubernetes.io/instance: {{ .Release.Name }}
@@ -49,7 +68,7 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: eni-controller
+  name: eni-controller-role
 subjects:
 - kind: ServiceAccount
   name: {{ .Values.serviceAccount.name }}
